package jc_res_atlas;

import "Primitive.proto";
import "Texture.proto";

option java_package = "com.eaglesakura.resource.texture.atlas";


// ATLAS化された各画像を示す
message AtlasTexture {
    // Origin Filename.
    // 拡張子は取り除かれる
    required string filename = 2000;
    // アトラスグループ内のテクスチャ位置
    required jc_res.Rectangle frame = 3000;
    // テクスチャが縦回転させられていたらtrue
    required bool rotated = 4000;
    // トリミング済みであればtrue
    required bool trimmed = 5000;
    //
    optional jc_res.Rectangle spriteSourceSize = 6000;
    // 元画像サイズ
    optional jc_res.Size sourceSize = 7000;
}

// アトラス化した画像の親グループ
message AtlasGroup {
    // 識別子
    required string uniqueId = 1000;
    // 画像配列
    repeated AtlasTexture images = 2000;
    // 画像ファイル名
    // 拡張子は取り除かれる
    required string filename = 3000;
    // 画像の拡大率
    optional float scale = 4000;
    // 画像読み込み時のピクセルフォーマット
    optional jc_res_texture.PixelFormat importPixelFormat = 5000;
}